# Job-Desription-Parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  architecture.md  docker-compose.yml  implementation_plan.md  intent_matrix_results.md  mkdocs.yml  pyproject.toml  requirements.txt  restart_system.ps1  tasks.md  walkthrough.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3bc883988942_init.py  523a909e434c_add_in_review_and_corrected_to_review_.py  83573ee5e619_add_pipeline_events_table.py  91c8b91e6e90_add_pipeline_state_to_processing_runs.py  a1b2c3d4e5f6_add_core_domain_models.py
app/: __init__.py  main.py
app/compatibility/: __init__.py
app/config/: __init__.py  constants.py  environment.py  settings.py
app/database/: __init__.py  base.py  engine.py  session.py
app/extraction/: __init__.py
app/logging/: __init__.py  formatters.py  logger.py  middleware.py
app/models/: __init__.py  models.py
app/normalization/: __init__.py
app/preprocessing/: __init__.py
app/recommendations/: __init__.py
app/repositories/: __init__.py  base.py  job_repository.py  skill_repository.py
app/resume/: __init__.py
data/custom_taxonomy/: ai_frameworks.json
docs/graphs/: pipeline_flow.md
frontend/: package-lock.json  package.json
frontend/docs/: animation_system.md  api_integration.md  component_map.md  design_system.md  frontend_architecture.md  frontend_walkthrough.md
skills/: classify_requirement.md  extract_skills.md  normalize_skill.md  review_flag.md  segment_jd.md
tests/unit/: test_app.py  test_boilerplate_detector.py  test_compatibility.py  test_config.py  test_database.py  test_experience_extractor.py  test_extraction_api.py  test_extraction_schemas.py  test_extraction_service.py  test_heading_detector.py  test_heading_normalizer.py  test_ingestion_schemas.py  test_langgraph_e2e.py  test_logging.py  test_matchers.py  test_mcp_framework.py  test_mcp_tools.py  test_mistral_client.py  test_model_manager.py  test_models.py  test_noise_filtering.py  test_normalization_api.py  test_normalization_schemas.py  test_normalization_service.py  test_ollama_client.py  test_pipeline_schemas.py  test_pipeline_service.py  test_playwright_fetcher.py  test_preprocessing_api.py  test_preprocessing_schemas.py  test_presentation.py  test_rankers.py  test_recommendations.py  test_repositories.py  (+15 more)
(+198 files in other folders)
